# qualify-backend/docs/swagger.json
@@ -176,20 +176,8 @@
                 "summary": "Login de usuário com geração de JWT",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Email do usuário",
-                        "name": "email",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Senha do usuário",
-                        "name": "password",
-                        "in": "query"
-                    },
-                    {
                         "description": "Objeto login",
-                        "name": "analyst",
+                        "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -4852,9 +4840,6 @@
                 },
                 "token_type": {
                     "type": "string"
-                },
-                "user": {
-                    "$ref": "#/definitions/pkg.User"
                 }
             }
         },
